Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* re-enable cpython implementation of DepSet parsing for eapi2- roughly
  a 31% speedup for current gentoo-x86 repository dependency parsing.

* performance improvements to pquery --attr alldepends; specifically
  depset.stringify_boolean is now 20% faster.

* performance improvements to pquery --attr alldepends -v


pkgcore 0.5.8: December 27th, 2009

* >snakeoil-0.3.4 is required for this release.

* key is reused as cpvstr for memory savings where possible in cpv
  extension objects.

* cpv extension objects now intern package, category, and key for
  memory reduction reasons.

* various slot fixups to reduce memory usage and potential corner case
  bugs.

* fix the scenario where there is one repo returned from the domain for
  pmerge... crappy bug feedback on that one lead to it slipping by.


pkgcore 0.5.7: December 22, 2009

* added pinspect script; used for basic reporting of metadata usage,
  and inspection of pkgsets.  Bit simple, but will be expanded down the line.

* filter-env is now installed into PATH; cli api isn't considered stable,
  but it should be useful for folks playing w/ bash environments or doing
  ebuild inspection.

* correct a tb in pmerge when the user configuration is strictly a single
  source repository.  Semi rare, but can occur.

* correct a tb when throwing a missing file error for specifying package.*
  settings directly to domain.

* correct a tb in profiles expansion code of USE_EXPAND and USE_EXPAND_HIDDEN
  when they're completely undefined in the profile stack.  Rare, but if a
  user is building a custom profile stack from the ground up, it's possible
  to hit it.

* gentoo upstream bug 297933; filter BASHOPTS to keep bash 4.1 happy.

* correct an encoding issue in making binpkgs when an ebuild is utf8

* fix a traceback in pmerge -fK when trying to fetch required files for
  binpkgs.

