@@ -4,6 +4,9 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* for package.provided repositories, short circuit their itermatch/match
+  if there aren't any results possible.
+
 * re-enable cpython implementation of DepSet parsing for eapi2- roughly
   a 31% speedup for current gentoo-x86 repository dependency parsing.
 
